--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "test-sanity-with-next",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.1"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1"
-  }
+	"name": "new-lekanger-marketing-website",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@sanity/code-input": "^4.1.4",
+		"@sanity/image-url": "^1.0.2",
+		"@sanity/vision": "^3.37.2",
+		"next": "14.2.1",
+		"next-sanity": "^7.1.4",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-icons": "^5.0.1",
+		"react-player": "^2.16.0",
+		"react-twitter-embed": "^4.0.4",
+		"sanity": "^3.37.2",
+		"styled-components": "^6.1.8"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"postcss": "^8",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
