--- a/package.json
+++ b/package.json
@@ -9,23 +9,45 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@sanity/code-input": "^4.1.4",
+		"@marsidev/react-turnstile": "^0.4.1",
+		"@next/third-parties": "^14.0.4",
+		"@nextui-org/react": "^2.2.9",
+		"@sanity/client": "^6.15.13",
+		"@sanity/code-input": "^4.1.3",
 		"@sanity/image-url": "^1.0.2",
+		"@sanity/locale-nb-no": "^1.1.7",
+		"@sanity/react-loader": "^1.9.9",
+		"@sanity/ui": "^2.0.14",
 		"@sanity/vision": "^3.37.2",
-		"next": "14.2.1",
+		"@sanity/visual-editing": "^1.8.8",
+		"@sentry/nextjs": "^7.94.1",
+		"clsx": "^2.1.0",
+		"framer-motion": "^10.18.0",
+		"get-youtube-id": "^1.0.1",
+		"lucide-react": "^0.309.0",
+		"next": "^14.2.1",
 		"next-sanity": "^7.1.4",
+		"next-themes": "^0.2.1",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.0.1",
-		"react-player": "^2.16.0",
+		"react-lite-youtube-embed": "^2.4.0",
+		"react-player": "^2.15.1",
+		"react-tweet": "^3.2.1",
 		"react-twitter-embed": "^4.0.4",
+		"resend": "^2.1.0",
 		"sanity": "^3.37.2",
-		"styled-components": "^6.1.8"
+		"simplex-noise": "^4.0.1",
+		"styled-components": "^6.1.8",
+		"tailwind-merge": "^2.2.2",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
+		"@biomejs/biome": "^1.5.2",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"autoprefixer": "^10.0.1",
 		"postcss": "^8",
 		"tailwindcss": "^3.4.1",
 		"typescript": "^5"
