--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"dependencies": {
 		"@marsidev/react-turnstile": "^0.4.1",
 		"@next/third-parties": "^14.0.4",
-		"@nextui-org/react": "^2.2.9",
+		"@nextui-org/react": "^2.2.10",
 		"@sanity/client": "^6.15.13",
 		"@sanity/code-input": "^4.1.3",
 		"@sanity/image-url": "^1.0.2",
@@ -37,6 +37,7 @@
 		"react-twitter-embed": "^4.0.4",
 		"resend": "^2.1.0",
 		"sanity": "^3.37.2",
+		"server-only": "^0.0.1",
 		"simplex-noise": "^4.0.1",
 		"styled-components": "^6.1.8",
 		"tailwind-merge": "^2.2.2",
