--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@sanity/vision": "^3.37.2",
 		"@sanity/visual-editing": "^1.8.8",
 		"@sentry/nextjs": "^7.94.1",
+		"@types/react-syntax-highlighter": "^15.5.11",
 		"clsx": "^2.1.0",
 		"framer-motion": "^10.18.0",
 		"get-youtube-id": "^1.0.1",
@@ -32,7 +33,8 @@
 		"react-dom": "^18",
 		"react-icons": "^5.0.1",
 		"react-lite-youtube-embed": "^2.4.0",
-		"react-player": "^2.15.1",
+		"react-player": "^2.16.0",
+		"react-syntax-highlighter": "^15.5.0",
 		"react-tweet": "^3.2.1",
 		"react-twitter-embed": "^4.0.4",
 		"resend": "^2.1.0",
