--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
 	"dependencies": {
 		"@marsidev/react-turnstile": "^0.4.1",
 		"@next/third-parties": "^14.0.4",
-		"@nextui-org/react": "^2.2.10",
+		"@nextui-org/react": "^2.3.5",
+		"@portabletext/react": "^3.0.18",
 		"@sanity/client": "^6.15.13",
 		"@sanity/code-input": "^4.1.3",
+		"@sanity/icons": "^2.11.8",
 		"@sanity/image-url": "^1.0.2",
 		"@sanity/locale-nb-no": "^1.1.7",
 		"@sanity/react-loader": "^1.9.9",
@@ -45,7 +47,7 @@
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.5.2",
+		"@biomejs/biome": "^1.7.1",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
