build: add date-fns

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@sentry/nextjs": "^7.94.1",
 		"@types/react-syntax-highlighter": "^15.5.11",
 		"clsx": "^2.1.0",
+		"date-fns": "^3.6.0",
 		"framer-motion": "^10.18.0",
 		"get-youtube-id": "^1.0.1",
 		"lucide-react": "^0.309.0",
@@ -42,6 +43,7 @@
 		"react-twitter-embed": "^4.0.4",
 		"resend": "^2.1.0",
 		"sanity": "3.38.0",
+		"schema-dts": "^1.1.2",
 		"simplex-noise": "^4.0.1",
 		"styled-components": "^6.1.8",
 		"tailwind-merge": "^2.2.2",
