--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "new-lekanger-marketing-website",
 	"version": "0.1.0",
 	"private": true,
+	"packageManager": "pnpm@9.0.6",
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
